Validacion de campos del form mediante JS

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -119,7 +119,7 @@
                         <form class="contact-form" action="#" method="post">
                             <div>
                                 <label for="topic">El asunto:</label>
-                                <select name="topic" id="topic" required>
+                                <select name="topic" id="topic">
                                     <option value="">Seleccione una opción</option>
                                     <option value="ship">Envíos</option>
                                     <option value="hours">Horarios de atención</option>
@@ -129,15 +129,15 @@
                             </div>
                             <div>
                                 <label for="name">Nombre:</label>
-                                <input type="text" name="name" id="name" required>
+                                <input type="text" name="name" id="name" autocomplete="off">
                             </div>
                             <div>
                                 <label for="lastname">Apellido:</label>
-                                <input type="text" name="lastname" id="lastname" required>
+                                <input type="text" name="lastname" id="lastname" autocomplete="off">
                             </div>
                             <div>
                                 <label for="email">Email:</label>
-                                <input type="email" name="email" id="email" required>
+                                <input type="email" name="email" id="email" autocomplete="off">
                             </div>
                             <div>
                                 <label>Género:</label>
@@ -155,8 +155,8 @@
                                 <textarea name="message" id="message"></textarea>
                             </div>
                             <div class="btn-form-container">
-                                <input class="btn-form" type="submit" value="Enviar">
-                                <input class="btn-form" type="reset" value="Borrar">
+                                <input id="btn-submit" class="btn-form" type="submit" value="Enviar">
+                                <input id="btn-reset" class="btn-form" type="reset" value="Borrar">
                             </div>
                         </form>
                     </div>
@@ -189,6 +189,8 @@
         </div>
     </footer>
             
+    <!-- Scripts -->
+    <script src="../JS/validations.js"></script>
 </body>
 
 </html>
