Se puso el index.html en la carpeta principal y se modificaron los enlaces a los archivos correspondientes

--- a/HTML/sucursales.html
+++ b/HTML/sucursales.html
@@ -23,7 +23,7 @@
                 <div class="dropdown-menu">
                     <a href="#"><i class="fa-solid fa-bars"></i></a>
                     <div class="dropdown-content">
-                        <a href="./index.html">Inicio</a>
+                        <a href="../index.html">Inicio</a>
                         <a href="./contacto.html">Contacto</a>
                         <a href="./sucursales.html">Sucursales</a>
                         <a href="./marca.html">Nuestra Marca</a>
@@ -34,11 +34,11 @@
                     </div>
                 </div>
                 <div class="logo">
-                    <a href="index.html"><img src="../IMG/Logo_sin_fondo.png" alt="Logo Supermercado"></a>
+                    <a href="../index.html"><img src="../IMG/Logo_sin_fondo.png" alt="Logo Supermercado"></a>
                 </div>
                 <div class="nav-items">
                     <ul>
-                        <li><a href="./index.html" class="underline-animation">Inicio</a></li>
+                        <li><a href="../index.html" class="underline-animation">Inicio</a></li>
                         <li><a href="./contacto.html" class="underline-animation">Contacto</a></li>
                         <li><a href="./sucursales.html" class="underline-animation">Sucursales</a></li>
                         <li><a href="./marca.html" class="underline-animation">Nuestra Marca</a></li>
@@ -249,7 +249,7 @@
             </div>
             <div class="footer-nav-items">
                 <ul>
-                    <li><a href="./index.html" class="underline-animation">Inicio</a></li>
+                    <li><a href="../index.html" class="underline-animation">Inicio</a></li>
                     <li><a href="./contacto.html" class="underline-animation">Contacto</a></li>
                     <li><a href="./sucursales.html" class="underline-animation">Sucursales</a></li>
                     <li><a href="./marca.html" class="underline-animation">Nuestra Marca</a></li>
