Se coloco la S al http de las invocaciones a FontAwesome

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -7,7 +7,7 @@
     
     <!-- Font Awesome -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
-    <script src="http://kit.fontawesome.com/fa04600604.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/fa04600604.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/styles.css">
