Se desarrollo el controlador de categorias que se conecta a la API REST para cargar los productos segun la categoria seleccionada

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -73,37 +73,37 @@
                     <ul>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Despensa</a>
+                                <a id="category-almacen" class="primary-category" href="#">Almacen</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Bebé</a>
+                                <a id="category-bebes" class="primary-category" href="#">Bebés y niños</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Cuidado del hogar</a>
+                                <a id="category-hogar" class="primary-category" href="#">Cuidado del hogar</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Cuidado personal</a>
+                                <a id="category-perfumeria" class="primary-category" href="#">Perfumería</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Bebidas y bodega</a>
+                                <a id="category-bebidas" class="primary-category" href="#">Bebidas y bodega</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Congelados</a>
+                                <a id="category-congelados" class="primary-category" href="#">Congelados</a>
                                 <div></div>
                             </div>
                         </li>
