--- a/index.html
+++ b/index.html
@@ -73,37 +73,37 @@
                     <ul>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Despensa</a>
+                                <a id="category-almacen" class="primary-category" href="#">Almacen</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Bebé</a>
+                                <a id="category-bebes" class="primary-category" href="#">Bebés y niños</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Cuidado del hogar</a>
+                                <a id="category-hogar" class="primary-category" href="#">Cuidado del hogar</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Cuidado personal</a>
+                                <a id="category-perfumeria" class="primary-category" href="#">Perfumería</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Bebidas y bodega</a>
+                                <a id="category-bebidas" class="primary-category" href="#">Bebidas y bodega</a>
                                 <div></div>
                             </div>
                         </li>
                         <li>
                             <div class="primary-category">
-                                <a class="primary-category" href="#">Congelados</a>
+                                <a id="category-congelados" class="primary-category" href="#">Congelados</a>
                                 <div></div>
                             </div>
                         </li>
@@ -113,7 +113,7 @@
 
             <!-- CONTENT -->
             <section class="content-section">
-                <div class="products-container">
+                <div id="products-container" class="products-container">
                     <div class="product">
                         <img src="./IMG/1_arroz.png" alt="arroz">
                         <h3>Arroz</h3>
@@ -215,6 +215,8 @@
         </div>
     </footer>
 
+    <!-- Scripts -->
+    <script src="./JS/categories/categoriesController.js"></script>
 </body>
 
 </html>
