Se crearon las paginas del Login e Inicio de Sesion + los scripts que manejan la logica de navegacion entre las paginas

--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@
                 <div class="nav-header-right">
                     <div id="nav-search" class="search">
                         <input type="text" placeholder="Buscar..">
-                        <a href="#"><i class="fas fa-search"></i></a>
+                        <a href="#"><i class="fas fa-search" title="Buscar.."></i></a>
                     </div>
-                    <div class="cart">
-                        <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                    <div class="icon">
+                        <a href="#">
+                            <i class="fas fa-shopping-cart" title="Carrito de compras"></i>
+                            <span id="cart-count">0</span>
+                        </a>
+                    </div>
+                    <div class="icon">
+                        <a href="./HTML/login.html"><i class="fa-regular fa-circle-user fa-lg" title="Login"></i></a>
                     </div>
                 </div>
             </div>
@@ -216,7 +222,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="./JS/categories/categoriesController.js"></script>
+    <script src="./JS/category/categoryController.js"></script>
 </body>
 
 </html>
