--- a/HTML/marca.html
+++ b/HTML/marca.html
@@ -49,8 +49,14 @@
                         <input type="text" placeholder="Buscar..">
                         <a href="#"><i class="fas fa-search"></i></a>
                     </div>
-                    <div class="cart">
-                        <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                    <div class="icon">
+                        <a href="#">
+                            <i class="fas fa-shopping-cart" title="Carrito de compras"></i>
+                            <span id="cart-count">0</span>
+                        </a>
+                    </div>
+                    <div id="user" class="icon">
+                        <a href="./login.html"><i class="fa-regular fa-circle-user fa-lg" title="Login"></i></a>
                     </div>
                 </div>
             </div>
