--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <li><a href="./HTML/marca.html" class="underline-animation">Nuestra Marca</a></li>
                     </ul>
                 </div>
-                <div class="nav-header-right">
+                <div id="nav-header-right" class="nav-header-right">
                     <div id="nav-search" class="search">
                         <input type="text" placeholder="Buscar..">
                         <a href="#"><i class="fas fa-search" title="Buscar.."></i></a>
@@ -55,7 +55,7 @@
                             <span id="cart-count">0</span>
                         </a>
                     </div>
-                    <div class="icon">
+                    <div id="user" class="icon">
                         <a href="./HTML/login.html"><i class="fa-regular fa-circle-user fa-lg" title="Login"></i></a>
                     </div>
                 </div>
@@ -223,6 +223,7 @@
 
     <!-- Scripts -->
     <script src="./JS/category/categoryController.js"></script>
+    <script src="./JS/login/userLogged.js"></script>
 </body>
 
 </html>
