--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -39,39 +39,39 @@
 
         <h2 class="fw-bold text-center py-2">Crear cuenta</h2>
 
-        <!-- Login -->
-         <form action="#">
+        <!-- Registro de nuevo usuario -->
+         <form id="register-form" action="#">
             <div class="mb-2">
-              <label for="name" class="form-label">Nombres:</label>
-              <input type="text" class="form-control" name="name">
+              <label for="name" class="form-label">Nombre:</label>
+              <input type="text" class="form-control" name="name" id="name">
             </div>
             <div class="mb-2">
-              <label for="lastname" class="form-label">Apellido:</label>
-              <input type="text" class="form-control" name="lastname">
+              <label for="lastName" class="form-label">Apellido:</label>
+              <input type="text" class="form-control" name="lastName" id="lastName">
             </div>
             <div class="mb-2 form-check form-check-inline">
               <label class="form-check-label" for="gender-male">Hombre</label>
-              <input class="form-check-input" type="radio" name="gender" id="gender-male" checked>
+              <input class="form-check-input" type="radio" name="gender" id="male" checked>
             </div>
             <div class="mb-2 form-check form-check-inline">
               <label class="form-check-label" for="gender-female">Mujer</label>
-              <input class="form-check-input" type="radio" name="gender" id="gender-female">
+              <input class="form-check-input" type="radio" name="gender" id="female">
             </div>
             <div class="mb-2">
               <label for="date" class="form-label">Fecha de nacimiento:</label>
-              <input type="date" class="form-control" name="date">
+              <input type="date" class="form-control" name="date" id="birthDate">
             </div>
             <div class="mb-2">
               <label for="email" class="form-label">Correo electrónico:</label>
-              <input type="email" class="form-control" name="email">
+              <input type="email" class="form-control" name="email" id="email">
             </div>
             <div class="mb-2">
               <label for="password" class="form-label">Contraseña:</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control" name="password" id="password">
             </div>
             <div class="mb-2">
               <label for="password-repeat" class="form-label">Vuelve a escribir la contraseña:</label>
-              <input type="password" class="form-control" name="password-repeat">
+              <input type="password" class="form-control" name="password-repeat" id="repeatedPassword">
             </div>
 
             <!-- Botones -->
@@ -87,7 +87,7 @@
             </div>
 
             <div class="my-3">
-              <span>¿Ya tienes cuenta? <a href="./login.html">Inicia sesión</a></span>
+              <span>¿Ya tienes cuenta? <a id="btn-login" href="#">Inicia sesión</a></span>
             </div>
          </form>
       </div>
@@ -98,6 +98,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script src="../JS/validation/userValidation.js"></script>
   <script src="../JS/login/registerController.js"></script>
 </body>
 
