Se creo todo lo relacionado a agregar un producto al carrito y que se muestre en el logo del carrito, como tambien se agrego el cart.html en el cual se puede agregar unidades o quitar unidades o productos. Tambien se muestra el total de la compra y la cantidad de productos.

--- a/HTML/sucursales.html
+++ b/HTML/sucursales.html
@@ -44,19 +44,19 @@
                         <li><a href="./marca.html" class="underline-animation">Nuestra Marca</a></li>
                     </ul>
                 </div>
-                <div class="nav-header-right">
+                <div id="nav-header-right" class="nav-header-right">
                     <div id="nav-search" class="search">
                         <input type="text" placeholder="Buscar..">
-                        <a href="#"><i class="fas fa-search"></i></a>
+                        <a href="#"><i class="fas fa-search" title="Buscar.."></i></a>
                     </div>
                     <div class="icon">
-                        <a href="#">
+                        <a href="./cart.html">
                             <i class="fas fa-shopping-cart" title="Carrito de compras"></i>
                             <span id="cart-count">0</span>
                         </a>
                     </div>
                     <div id="user" class="icon">
-                        <a href="./login.html"><i class="fa-regular fa-circle-user fa-lg" title="Login"></i></a>
+                        <a href="../HTML/login.html"><i class="fa-regular fa-circle-user fa-lg" title="Login"></i></a>
                     </div>
                 </div>
             </div>
@@ -264,6 +264,9 @@
         </div>
     </footer>
 
+    <!-- Scripts -->
+    <script src="../JS/cart/cartCount.js"></script>
+    <script src="../JS/login/userLogged.js"></script>
 </body>
 
 </html>
