--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#"><i class="fas fa-search" title="Buscar.."></i></a>
                     </div>
                     <div class="icon">
-                        <a href="#">
+                        <a href="./HTML/cart.html">
                             <i class="fas fa-shopping-cart" title="Carrito de compras"></i>
                             <span id="cart-count">0</span>
                         </a>
@@ -124,73 +124,73 @@
                         <img src="./IMG/1_arroz.png" alt="arroz">
                         <h3>Arroz</h3>
                         <p>Precio: $10</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/2_carne.jpg" alt="carne">
                         <h3>Carne</h3>
                         <p>Precio: $2000</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/3_lucchetti.jpg" alt="lucchetti">
                         <h3>Lucchetti</h3>
                         <p>Precio: $2000</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/4_aceite.jpg" alt="aceite">
                         <h3>Aceite</h3>
                         <p>Precio: $2000</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/5_fideos_2.jpg" alt="fideos">
                         <h3>Fideos</h3>
                         <p>Precio: $2000</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/6_fideos.jpg" alt="fideos">
                         <h3>Fideos</h3>
                         <p>Precio: $2000</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/7_nuggets.jpg" alt="nuggets">
                         <h3>Nuggets</h3>
                         <p>Precio: $20</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/8_arbejas.jpg" alt="arbejas">
                         <h3>Arbejas</h3>
                         <p>Precio: $20</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/9_pollo.jpg" alt="pollo">
                         <h3>Pollo</h3>
                         <p>Precio: $20</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/10_yerba.jpg" alt="yerba">
                         <h3>Yerba</h3>
                         <p>Precio: $20</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/12_salsa_tomate.jpeg" alt="yerba">
                         <h3>Salsa Tomate</h3>
                         <p>Precio: $20</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                     <div class="product">
                         <img src="./IMG/13_pizza.jpg" alt="yerba">
                         <h3>Pizza Congelada</h3>
                         <p>Precio: $20</p>
-                        <button class="btn-add-product">Agregar al carrito</button>
+                        <button class="btn-choice">Agregar al carrito</button>
                     </div>
                 </div>
             </section>
@@ -222,6 +222,8 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="./JS/cart/cartCount.js"></script>
+    <script src="./JS/cart/cartController.js"></script>
     <script src="./JS/category/categoryController.js"></script>
     <script src="./JS/login/userLogged.js"></script>
 </body>
