Se agrego la opcion de Hacer Compra, la cual se comunica con la API para que esta guarde el carrito con sus productos en la base de datos

--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -44,7 +44,7 @@
                         <li><a href="./marca.html" class="underline-animation">Nuestra Marca</a></li>
                     </ul>
                 </div>
-                <div class="nav-header-right">
+                <div id="nav-header-right" class="nav-header-right">
                     <div id="nav-search" class="search">
                         <input type="text" placeholder="Buscar..">
                         <a href="#"><i class="fas fa-search" title="Buscar.."></i></a>
@@ -162,6 +162,7 @@
     <script src="../JS/cart/cartCount.js"></script>
     <script src="../JS/cart/cart.js"></script>
     <script src="../JS/cart/cartController.js"></script>
+    <script src="../JS/login/userLogged.js"></script>
 </body>
 
 </html>
