Se agrego la funcionalidad de que al cargar el index.html se muestren todos los productos almacenados. Tambien se arreglo el grid que lista los items del carrito para que se auto-ajuste a la pantalla

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
     <!-- Scripts -->
     <script src="./JS/cart/cartCount.js"></script>
     <script src="./JS/cart/cartController.js"></script>
+    <script src="./JS/category/category.js"></script>
     <script src="./JS/category/categoryController.js"></script>
     <script src="./JS/login/userLogged.js"></script>
 </body>
