Se codifico la opcion de Editar Usuario

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <!-- CONTENT -->
             <section class="content-section">
                 <div id="products-container" class="products-container">
-                    <div class="product">
+                    <!-- <div class="product">
                         <img src="./IMG/1_arroz.png" alt="arroz">
                         <h3>Arroz</h3>
                         <p>Precio: $10</p>
@@ -191,7 +191,7 @@
                         <h3>Pizza Congelada</h3>
                         <p>Precio: $20</p>
                         <button class="btn-choice">Agregar al carrito</button>
-                    </div>
+                    </div> -->
                 </div>
             </section>
         </div>
