--- a/HTML/actualizarUsuario.html
+++ b/HTML/actualizarUsuario.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registro</title>
+  <title>Edición de cuenta</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,7 @@
     }
 
     .bg {
-      background-image: url("https://media.istockphoto.com/id/1414488777/es/foto/padres-felices-y-su-hija-eligiendo-comida-en-la-secci%C3%B3n-refrigerada-en-el-supermercado.jpg?s=612x612&w=0&k=20&c=zG5t5UnFoB4-JN6vKBSBvmLVB4-GAQr4Ut6MKnP-kpg=");
+      background-image: url("https://st3.depositphotos.com/1017228/15363/i/450/depositphotos_153634600-stock-photo-vertical-image-of-young-family.jpg");
       background-position: center center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -29,18 +29,18 @@
 <body>
   <div class="container w-75 bg-white my-5 rounded shadow">
     <div class="row align-items-stretch">
-      <div class="col bg d-none d-md-block col-md-5 col-lg-5 col-xl-6 col-xxl-5 rounded-start">
-
+      <div class="col bg d-none d-md-block col-lg-5 col-xl-6 col-xxl-5 rounded-start">
+        <!-- Image -->
       </div>
       <div class="col bg-white py-3 px-4 rounded-end">
         <div class="text-end">
           <img src="../IMG/Logo.png" width="70px" alt="Logo">
         </div>
 
-        <h2 class="fw-bold text-center py-2">Crear cuenta</h2>
+        <h2 class="fw-bold text-center py-2">Editar cuenta</h2>
 
         <!-- Registro de nuevo usuario -->
-         <form id="register-form" action="#">
+         <form id="update-form" action="#">
             <div class="mb-2">
               <label for="name" class="form-label">Nombre:</label>
               <input type="text" class="form-control" name="name" id="name">
@@ -51,7 +51,7 @@
             </div>
             <div class="mb-2 form-check form-check-inline">
               <label class="form-check-label" for="gender-male">Hombre</label>
-              <input class="form-check-input" type="radio" name="gender" id="male" checked>
+              <input class="form-check-input" type="radio" name="gender" id="male">
             </div>
             <div class="mb-2 form-check form-check-inline">
               <label class="form-check-label" for="gender-female">Mujer</label>
@@ -65,29 +65,32 @@
               <label for="email" class="form-label">Correo electrónico:</label>
               <input type="email" class="form-control" name="email" id="email">
             </div>
-            <div class="mb-2">
-              <label for="password" class="form-label">Contraseña:</label>
-              <input type="password" class="form-control" name="password" id="password">
-            </div>
-            <div class="mb-2">
-              <label for="password-repeat" class="form-label">Vuelve a escribir la contraseña:</label>
-              <input type="password" class="form-control" name="password-repeat" id="repeatedPassword">
+            
+            <!-- Collapse para cambio de contraseña -->
+            <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-items" aria-expanded="false" aria-controls="collapseExample">
+              Cambiar contraseña
+            </button>
+            <div class="collapse" id="collapse-items">
+              <div class="mb-2">
+                <label for="password" class="form-label">Nueva contraseña:</label>
+                <input type="password" class="form-control" name="password" id="password">
+              </div>
+              <div class="mb-2">
+                <label for="password-repeat" class="form-label">Vuelve a escribir la nueva contraseña:</label>
+                <input type="password" class="form-control" name="password-repeat" id="repeatedPassword">
+              </div>
             </div>
 
             <!-- Botones -->
-            <div class="container w-100 pt-4">
+            <div class="container w-100">
               <div class="row">
                 <div class="col-6">
-                  <button id="btn-register" type="submit" class="btn btn-success w-100 my-1">Regístrate</button>
+                  <button id="btn-update" type="submit" class="btn btn-success w-100 my-1">Actualizar</button>
                 </div>
                 <div class="col-6">
                   <button id="btn-cancel" class="btn btn-outline-danger w-100 my-1">Cancelar</button>
                 </div>
               </div>
-            </div>
-
-            <div class="my-3">
-              <span>¿Ya tienes cuenta? <a id="btn-login" href="#">Inicia sesión</a></span>
             </div>
          </form>
       </div>
@@ -98,8 +101,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <script src="../JS/validation/userValidation.js"></script>
-  <script src="../JS/login/registerController.js"></script>
+    <script src="../JS/user/updateUser.js"></script>
+    <script src="../JS/validation/userValidation.js"></script>
 </body>
 
 </html>
