--- a/HTML/login.html
+++ b/HTML/login.html
@@ -58,10 +58,10 @@
             <div class="container w-100 pt-4">
               <div class="row">
                 <div class="col-6">
-                  <button id="btn-registrar" type="submit" class="btn btn-primary w-100 my-1 text-nowrap px-1 align-items-center">Iniciar sesión</button>
+                  <button id="btn-login" type="submit" class="btn btn-primary w-100 my-1 text-nowrap px-1 align-items-center">Iniciar sesión</button>
                 </div>
                 <div class="col-6">
-                  <button id="btn-volver" class="btn btn-outline-danger w-100 my-1">Volver</button>
+                  <button id="btn-back" class="btn btn-outline-danger w-100 my-1">Volver</button>
                 </div>
               </div>
             </div>
